Fix compass symbol alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1211,8 +1211,8 @@ html, body {
 /* Rotating Disk Container */
 .compass-disk {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   transform-origin: 50% 50%;
